Правки по замечаниям